# IFOPT

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  ifopt_ipopt.cc
demo/ifopt/: test_vars_constr_cost.h
include/ifopt_core/: composite.h  solver.h
include/ifopt_ipopt/: ipopt_adapter.h  ipopt_solver.h
src/: CMakeLists.txt
src/ifopt_core/: composite.cc  leaves.cc  problem.cc
src/ifopt_ipopt/: ipopt_adapter.cc  ipopt_solver.cc
test/: CMakeLists.txt  problem_test.cc
